# pantheon-webarena

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: add_agent.yml  bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: adding-an-agent.md  metrics.md  task-format.md
src/pantheon_bench/: __init__.py  cli.py  evaluator.py  metrics.py  reporter.py  runner.py  task_loader.py
src/pantheon_bench/adapters/: __init__.py  base.py  example.py  manual.py
tasks/example/: tasks.json
tests/: conftest.py  test_cli.py  test_evaluator.py  test_metrics.py  test_reporter.py  test_runner.py  test_task_loader.py
